[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-carver"
version = "1.0.0"
description = "Professional forensic data carving and recovery tool for Kali Linux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "ForensicCarver Team"}
]
keywords = ["forensics", "data-recovery", "carving", "kali", "digital-forensics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Recovery Tools",
]

dependencies = [
    "rich>=13.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
e01 = ["pyewf>=0.0.1"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
forensic-carver = "forensic_carver.cli:main"

[project.urls]
Homepage = "https://github.com/forensic-carver/forensic-carver"

[tool.setuptools.packages.find]
where = ["."]
include = ["forensic_carver*"]
